--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,6 +7,43 @@ on:
     branches: [ main ]
 
 jobs:
+  # from: https://github.com/marketplace/actions/swift-format-lint
+  swift-format-lint:
+    runs-on: ubuntu-latest
+    name: Swift-Format
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Restore swift build cache
+        uses: actions/cache@v1
+        with:
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-spm-
+
+      - name: swift build
+        run: |
+          if [ -d ".build" ]; then
+            if ! [ -x "$(command -v swift-format)" ]; then
+              sudo cp -f .build/release/swift-format /usr/local/bin/swift-format
+            fi
+          else
+            git clone -b swift-5.4-branch https://github.com/apple/swift-format.git
+            cd swift-format
+            swift build --disable-sandbox -c release
+            mv .build .. && cd ..
+            sudo cp -f .build/release/swift-format /usr/local/bin/swift-format
+          fi
+
+      - name: Lint
+        uses: Iron-Ham/swift-format-linter-action@v5
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          # Optional parameters. Note that these are formatted as JSON array strings
+          # excludes: '["Generated/", "Pods/"]'
+          # exclude-types: '[".graphql.swift"]'
   build:
     runs-on: ubuntu-latest
     steps:
