--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -2,7 +2,7 @@ name: Swift
 
 on:
   push:
-    branches: [ main ]
+    branches: [ * ]
   pull_request:
     branches: [ main ]
 
@@ -38,12 +38,8 @@ jobs:
           fi
 
       - name: Lint
-        uses: Iron-Ham/swift-format-linter-action@v5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          # Optional parameters. Note that these are formatted as JSON array strings
-          # excludes: '["Generated/", "Pods/"]'
-          # exclude-types: '[".graphql.swift"]'
+        run:
+          pwd
   build:
     runs-on: ubuntu-latest
     steps:
